--- a/Matcha/styles.css
+++ b/Matcha/styles.css
@@ -48,6 +48,7 @@ button {
       width: 70%;
       text-align: left;
       color: #025157;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
 
   .navitem {
@@ -88,7 +89,7 @@ margin auto centra de forma automática */
 }
 
 .Advert h2 {
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       font-size: 40px;
       color: #025157;
   }
@@ -132,4 +133,127 @@ y use todo el ancho, extendíendose al borde derecho */
 body {
     margin-top: 185px;
   }
-  
+
+.studycase {
+    display: flex;
+    background-color: #a1d683;
+    align-items: center;
+    margin: 0;
+}
+
+.statement {
+    padding: 120px;
+}
+
+.statement img {
+    width: 500px;
+    max-width: 150%;
+}
+
+.statement h2 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 36px;
+}
+
+.statement p {
+    font-family: sans-serif;
+    font-size: 18px;
+    color: #343434;
+    text-justify: auto;
+}
+
+.statement button {
+    position: absolute;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 13px;
+    size: 90px;
+    padding: 12px;
+    border-radius: 8px;
+    border-style: none;
+}
+
+.statement img {
+    margin-top: 60px;
+}
+
+.umfrage {
+    background-color: white;
+    padding: 0px;
+    width: 400px;
+    height: 750px;
+    justify-content: center;
+    margin: 100px;
+    border-radius: 20px;
+}
+
+.umfrage img {
+    max-width: 400px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.everly-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    background-color: #f9da73;
+    border-radius: 50%;
+    position: absolute; 
+    right: 120px; 
+    top: 1750px;
+}
+
+.everly-logo img {
+    width: 92px;
+}
+
+.Everly-body h4 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    color: #025157;
+    margin-left: 15px;
+    margin-top: 50px;
+}
+
+.Everly-body h3 {
+    font-family: sans-serif;
+    font-size: 18px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 40px;ç
+    margin-top: 40px;
+    text-justify: auto;
+    justify-content: center;
+}
+
+.stat {
+    display: flex;
+    align-items: center;
+    color: #828282;
+}
+
+.stat img {
+    width: 40px;
+    margin-left: 10px;
+}
+.stat p {
+    margin-right: 18px;
+    margin-left: 18px;
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
+.link {
+    text-align: center;
+}
+
+.link button{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 14px;
+    size: 50px;
+    padding: 10px;
+    border-radius: 8px;
+    border-style: none;
+}
