--- a/Matcha/styles.css
+++ b/Matcha/styles.css
@@ -26,6 +26,10 @@ button {
     font-family: sans-serif;
     line-height: 45px;
   }
+
+  main {
+      text-align: center;
+  }
   
   li {
       display: inline;
@@ -134,6 +138,80 @@ body {
     margin-top: 185px;
   }
 
+.features {
+    background-color: #025157;
+    display: grid;
+    /* grid-template-columns: 300px 300px; agrega columnas */
+   /* grid-template-columns: repeat(2, 300px); */
+   /* grid-template-columns: 500px 1fr; */
+
+   /* grid-template-columns: 1fr 1fr;
+   grid-template-rows: repeat(2, 330px); */
+
+   /* Alternativa: 
+   height: 660px;
+   grid-template-rows: repeat(2, 1fr); */
+
+   /* Shortcut: orden filas / columnas */
+   grid-template: repeat(2, 330px) / repeat(2, 1fr);
+}
+
+
+.feature-art {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
+    background-color: #fff;
+    border: 1px solid #dadada;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.feature-art img {
+    display: flex;
+    width: 50px;
+}
+
+.content {
+    margin: 25px;
+}
+
+.content img {
+    width: 60px;
+    margin: 10px;
+}
+
+.feature-art .content h2 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 24px;
+    font-weight: 100;
+}
+
+.feature-art .content p {
+    font-family: sans-serif;
+    font-size: 16px;
+    margin: 20px;
+    text-align: justify;
+}
+
+.content a {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.feature-art .sample {
+    flex: 1;
+    width: 40%;
+    position: relative;
+    right: -50px;
+}
+
+
+
 .studycase {
     display: flex;
     background-color: #a1d683;
@@ -202,7 +280,7 @@ body {
     border-radius: 50%;
     position: absolute; 
     right: 120px; 
-    top: 1750px;
+    top: 2400px;
 }
 
 .everly-logo img {
@@ -222,7 +300,7 @@ body {
     font-size: 18px;
     margin-left: 15px;
     margin-right: 15px;
-    margin-bottom: 40px;ç
+    margin-bottom: 40px;
     margin-top: 40px;
     text-justify: auto;
     justify-content: center;
@@ -256,4 +334,36 @@ body {
     padding: 10px;
     border-radius: 8px;
     border-style: none;
+}
+
+/** dispositivos móviles en vista viewport (vertical) */
+@media (max-width: 575px) {
+    .navbar, .actions {
+        display: none;
+    } 
+    
+    h1 {
+        font-size: 20px;
+    }
+
+}
+
+/** dispositivos pequeños en vista landscape (horizontal) */
+@media (min-width: 576px) and (max-width: 767px) {
+  
+}
+
+/** dispositivos medianos (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+  
+}
+
+/** dispositivos grandes (desktops) */
+@media (min-width: 992px) and (max-width: 1199px) {
+  
+}
+
+/** dispositivos extra grandes (monitores grandes, tvs) */
+@media (min-width: 1200px) {
+  
 }
