--- a/Matcha/styles.css
+++ b/Matcha/styles.css
@@ -48,12 +48,12 @@ button {
       width: 15%;
   }
 
-  .navbar {
+  /* .navbar {
       width: 70%;
       text-align: left;
       color: #025157;
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  }
+  } */
 
   .navitem {
       margin-left: 25px;
@@ -373,6 +373,11 @@ body {
     }
 
 }
+
+/* .carousel-inner {
+    max-height: 100%;
+    height: 400px;
+} */
 
 /** dispositivos pequeños en vista landscape (horizontal) */
 @media (min-width: 576px) and (max-width: 767px) {
